--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:client-prod": "webpack --mode production",
     "build:server-dev": "webpack --mode development --env server --watch",
     "build:server-prod": "webpack --mode development --env server",
-    "ssr:dev": "npm-run-all --parallel build:client-dev build:server-dev"
+    "ssr:dev": "cross-env NODE_ENV=development npm-run-all --parallel build:client-dev build:server-dev"
   },
   "keywords": [],
   "author": "",
@@ -44,6 +44,7 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
