--- a/package.json
+++ b/package.json
@@ -46,9 +46,13 @@
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
+    "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "isomorphic-style-loader": "^4.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
