--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:client-prod": "webpack --mode production",
     "build:server-dev": "webpack --mode development --env server --watch",
     "build:server-prod": "webpack --mode development --env server",
-    "ssr:dev": "cross-env NODE_ENV=development npm-run-all --parallel build:client-dev build:server-dev"
+    "ssr:dev": "cross-env NODE_ENV=development npm-run-all --parallel build:client-dev build:server-dev",
+    "ssr:prod": "cross-env NODE_ENV=production npm-run-all --parallel build:client-prod build:server-prod"
   },
   "keywords": [],
   "author": "",
@@ -50,7 +51,9 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-style-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "npm-run-all": "^4.1.5",
+    "null-loader": "^0.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "style-loader": "^0.23.1",
