--- a/package.json
+++ b/package.json
@@ -50,15 +50,19 @@
     "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "inline-manifest-webpack-plugin": "^4.0.2",
     "isomorphic-style-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "npm-run-all": "^4.1.5",
     "null-loader": "^0.1.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
+    "webpack-deep-scope-plugin": "^1.6.0",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   }
