--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-static": "^5.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.2",
+    "react-helmet": "^5.2.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router-config": "^4.4.0-beta.6",
