support dynamic import

--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,7 @@
                 "legacy": true
             }
         ],
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "@loadable/babel-plugin"
     ]
 }
