--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@loadable/component": "^5.6.0",
+    "@loadable/server": "^5.6.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "connected-react-router": "^6.3.1",
@@ -27,7 +29,6 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
-    "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
@@ -43,6 +44,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@loadable/babel-plugin": "^5.6.0",
+    "@loadable/webpack-plugin": "^5.5.0",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
