--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "supervisor dist/server/app.js",
+    "start:dev": "nodemon dist/server/app.js",
     "build:client-dev": "webpack --mode development",
     "build:client-prod": "webpack --mode production",
     "build:server-dev": "webpack --mode development --env server --watch",
@@ -57,6 +57,7 @@
     "inline-manifest-webpack-plugin": "^4.0.2",
     "isomorphic-style-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5",
     "null-loader": "^0.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
